tests/valid/definite/ListAppend_Valid_2.whiley
void System::main([string] args):
    left = [1,2]
    right = [3,4]
    r = left + right
    print str(r)
